--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@types/react-dom": "^16.9.8",
     "framer-motion": "^4.1.17",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-intersection-observer": "^8.32.1"
   },
   "browserslist": [
     "last 1 Chrome version"
